--- a/src/jephy.cn/travel/Dockerfile
+++ b/src/jephy.cn/travel/Dockerfile
@@ -12,10 +12,10 @@ COPY ./bin /opt/apps/travel/bin
 
 COPY ./api/etc/travel_api.toml /opt/apps/travel/etc/travel_api.toml
 
-#RUN curl -o /etc/yum.repos.d/CentOS-Base.repo http://mirrors.aliyun.com/repo/Centos-7.repo
-#RUN yum makecache
-#RUN yum install -y epel-release
-#RUN yum install -y nginx
-#RUN yum install -y supervisor
+RUN curl -o /etc/yum.repos.d/CentOS-Base.repo http://mirrors.aliyun.com/repo/Centos-7.repo
+RUN yum makecache
+RUN yum install -y epel-release
+RUN yum install -y nginx
+RUN yum install -y supervisor
 
 CMD sh /opt/apps/travel/docker/start.sh
