--- a/src/jephy.cn/travel/nginx/nginx.conf
+++ b/src/jephy.cn/travel/nginx/nginx.conf
@@ -48,5 +48,5 @@ http {
 
     proxy_cache_path /dev/shm/proxy_cache levels=1:2 keys_zone=proxy_cache_one:1024m;
 
-    include vhost/*.conf;
+    include conf.d/*.conf;
 }
