--- a/src/jephy.cn/travel/Dockerfile
+++ b/src/jephy.cn/travel/Dockerfile
@@ -13,9 +13,10 @@ COPY ./bin /opt/apps/travel/bin
 COPY ./api/etc/travel_api.toml /opt/apps/travel/etc/travel_api.toml
 
 RUN curl -o /etc/yum.repos.d/CentOS-Base.repo http://mirrors.aliyun.com/repo/Centos-7.repo
-RUN yum makecache
+RUN yum makecache -y
 RUN yum install -y epel-release
 RUN yum install -y nginx
 RUN yum install -y supervisor
+RUN yum install -y nodejs
 
 CMD sh /opt/apps/travel/docker/start.sh
