--- a/src/jephy.cn/travel/nginx/vhost/travel_server.conf
+++ b/src/jephy.cn/travel/nginx/vhost/travel_server.conf
@@ -27,11 +27,11 @@ server {
 
 	location ~ (^/api/) {
 		include /opt/apps/travel/nginx/proxy_pass.conf;
-		//proxy_pass http://travel_api;
+		proxy_pass http://travel_api;
 	}
 
     location / {
 		include /opt/apps/travel/nginx/proxy_pass.conf;
-        //proxy_pass http://travel_web;
+        proxy_pass http://travel_web;
     }
 }
