--- a/src/jephy.cn/travel/docker/Dockerfile-base
+++ b/src/jephy.cn/travel/docker/Dockerfile-base
@@ -6,7 +6,9 @@ RUN apk add supervisor
 RUN apk add nodejs
 RUN adduser -D -g 'www' www
 RUN mkdir -p /run/nginx/
+RUN mkdir -p /data/logs/nginx/
 RUN chown -R www:www /var/lib/nginx
-#RUN mkdir /etc/supervisor.d/
+RUN chown -R www:www /data/logs/nginx/
+RUN mkdir /etc/supervisord.d/
 
 CMD /usr/sbin/sshd -D
