--- a/src/jephy.cn/travel/docker/Dockerfile-base
+++ b/src/jephy.cn/travel/docker/Dockerfile-base
@@ -5,6 +5,7 @@ RUN apk update
 RUN apk upgrade
 RUN apk add --no-cache bash bash-doc bash-completion
 RUN rm -rf /var/cache/apk/*
+RUN /bin/bash
 RUN apk add nginx
 RUN apk add supervisor
 RUN apk add nodejs
