--- a/src/jephy.cn/travel/docker/Dockerfile-base
+++ b/src/jephy.cn/travel/docker/Dockerfile-base
@@ -5,7 +5,7 @@ RUN apk update
 RUN apk upgrade
 RUN apk add --no-cache bash bash-doc bash-completion
 RUN rm -rf /var/cache/apk/*
-EVN MYSQL_ROOT_PASSWORD=root
+ENV MYSQL_ROOT_PASSWORD=root
 RUN /bin/bash
 RUN apk add nginx
 RUN apk add supervisor
