--- a/src/jephy.cn/travel/docker/Dockerfile-base
+++ b/src/jephy.cn/travel/docker/Dockerfile-base
@@ -11,7 +11,7 @@ RUN apk add nginx
 RUN apk add supervisor
 RUN apk add nodejs
 RUN apk add npm
-RUN apk add mysql
+#RUN apk add mysql
 RUN adduser -D -g 'www' www
 RUN mkdir -p /run/nginx/
 RUN mkdir -p /data/logs/nginx/
