--- a/src/jephy.cn/travel/Dockerfile
+++ b/src/jephy.cn/travel/Dockerfile
@@ -23,4 +23,4 @@ COPY ./api/etc/travel_api.toml /opt/apps/travel/etc/travel_api.toml
 
 RUN cd /opt/apps/travel/web && npm install
 
-CMD sh /opt/apps/travel/docker/start.sh
+CMD ["sh", "/opt/apps/travel/docker/start.sh"]
