--- a/src/jephy.cn/travel/nginx/nginx.conf
+++ b/src/jephy.cn/travel/nginx/nginx.conf
@@ -46,7 +46,7 @@ http {
     large_client_header_buffers 4 128k;
     client_header_buffer_size 32k;
 
-    proxy_cache_path /dev/shm/proxy_cache levels=1:2 keys_zone=proxy_cache_one:1024m;
+    #proxy_cache_path /dev/shm/proxy_cache levels=1:2 keys_zone=proxy_cache_one:1024m;
 
     include conf.d/*.conf;
 }
