--- a/src/jephy.cn/travel/web/package.json
+++ b/src/jephy.cn/travel/web/package.json
@@ -14,7 +14,8 @@
     "config": "^3.2.2",
     "fs": "0.0.1-security",
     "jr-qrcode": "^1.1.4",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "qrcodejs2": "^0.0.2"
   },
   "devDependencies": {},
   "config": {
