--- a/src/jephy.cn/travel/web/package.json
+++ b/src/jephy.cn/travel/web/package.json
@@ -12,10 +12,12 @@
   },
   "dependencies": {
     "config": "^3.2.2",
+    "element-ui": "^2.12.0",
     "fs": "0.0.1-security",
     "jr-qrcode": "^1.1.4",
     "nuxt": "^2.0.0",
-    "qrcodejs2": "^0.0.2"
+    "qrcodejs2": "^0.0.2",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {},
   "config": {
