--- a/src/jephy.cn/travel/web/package.json
+++ b/src/jephy.cn/travel/web/package.json
@@ -17,6 +17,8 @@
     "jr-qrcode": "^1.1.4",
     "nuxt": "^2.0.0",
     "qrcodejs2": "^0.0.2",
+    "vue-json-viewer": "^2.2.4",
+    "vue-json-views": "^0.3.0",
     "vuex": "^3.1.1"
   },
   "devDependencies": {},
