--- a/src/jephy.cn/travel/web/package.json
+++ b/src/jephy.cn/travel/web/package.json
@@ -14,6 +14,7 @@
     "config": "^3.2.2",
     "element-ui": "^2.12.0",
     "fs": "0.0.1-security",
+    "jquery.json-viewer": "^1.4.0",
     "jr-qrcode": "^1.1.4",
     "nuxt": "^2.0.0",
     "qrcodejs2": "^0.0.2",
