--- a/src/jephy.cn/tools/nginx/vhost/tools_server.conf
+++ b/src/jephy.cn/tools/nginx/vhost/tools_server.conf
@@ -1,6 +1,6 @@
-upstream tools_web {
-	server 127.0.0.1:83;
-}
+#upstream tools_web {
+#	server 127.0.0.1:83;
+#}
 
 server {
     listen 80 ;
@@ -17,7 +17,18 @@ server {
 	proxy_http_version  1.1;
 	proxy_set_header    Connection  "";
 
+    #location / {
+    #    proxy_pass http://tools_web;
+    #}
+
+    root /opt/apps/travel/src/jephy.cn/tools/dist/;
+
     location / {
-        proxy_pass http://tools_web;
+      try_files $uri $uri/ @router;
+      index  index.html index.htm;
+    }
+
+    location @router {
+      rewrite ^.*$ /index.html last;
     }
 }
