--- a/src/jephy.cn/tools/nginx/vhost/tools_server.conf
+++ b/src/jephy.cn/tools/nginx/vhost/tools_server.conf
@@ -1,28 +1,50 @@
-#upstream tools_web {
-#	server 127.0.0.1:83;
-#}
 
 server {
     listen 80 ;
+    server_name tools8.info www.tools8.info;
+    rewrite ^(.*)$  https://$host$1 permanent;
+}
+
+server {
+    listen 443 ssl http2;
     server_name tools8.info;
 
-    access_log off; # /data/logs/nginx/tools_access.log;
-    error_log /data/logs/nginx/tools_error.log;
-    proxy_next_upstream off;
-	proxy_set_header    X-Real-IP           $remote_addr;
-	proxy_set_header    X-Internal-Real-IP  $remote_addr;
-	proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
-	proxy_set_header    X-Forwarded-Proto   "https";
-	proxy_set_header    Host                $host;
-	proxy_http_version  1.1;
-	proxy_set_header    Connection  "";
+    ssl                  on;
+    ssl_certificate      /opt/apps/travel/src/jephy.cn/tools/nginx/ssl/tools8.info.pem;
+    ssl_certificate_key  /opt/apps/travel/src/jephy.cn/tools/nginx/ssl/tools8.info.key;
 
-    #location / {
-    #    proxy_pass http://tools_web;
-    #}
+    ssl_session_timeout  5m;
+    ssl_session_cache shared:SSL:50m;
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2  SSLv2 SSLv3;
+    ssl_ciphers  ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv2:+EXP;
+    ssl_prefer_server_ciphers   on;
 
     root /opt/apps/travel/src/jephy.cn/tools/dist/;
+    location / {
+      try_files $uri $uri/ @router;
+      index  index.html index.htm;
+    }
 
+    location @router {
+      rewrite ^.*$ /index.html last;
+    }
+}
+
+server {
+    listen 443 ssl http2;
+    server_name www.tools8.info;
+
+    ssl                  on;
+    ssl_certificate      /opt/apps/travel/src/jephy.cn/tools/nginx/ssl/www.tools8.info.pem;
+    ssl_certificate_key  /opt/apps/travel/src/jephy.cn/tools/nginx/ssl/www.tools8.info.key;
+
+    ssl_session_timeout  5m;
+    ssl_session_cache shared:SSL:50m;
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2  SSLv2 SSLv3;
+    ssl_ciphers  ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv2:+EXP;
+    ssl_prefer_server_ciphers   on;
+
+    root /opt/apps/travel/src/jephy.cn/tools/dist/;
     location / {
       try_files $uri $uri/ @router;
       index  index.html index.htm;
