--- a/src/jephy.cn/tools/nginx/vhost/tools_server.conf
+++ b/src/jephy.cn/tools/nginx/vhost/tools_server.conf
@@ -1,6 +1,21 @@
 
 server {
     listen 80 ;
+    server_name www.jephy.cn www.jephy.top;
+
+    root /opt/apps/travel/src/jephy.cn/tools/dist/;
+    location / {
+      try_files $uri $uri/ @router;
+      index  index.html index.htm;
+    }
+
+    location @router {
+      rewrite ^.*$ /index.html last;
+    }
+}
+
+server {
+    listen 80 ;
     server_name tools8.info www.tools8.info;
     rewrite ^(.*)$  https://$host$1 permanent;
 }
